tests/cli/snapshots/cli__check__all_three_args_combined.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - missing
    - "--primary-locale"
    - en
    - "--source-root"
    - custom-src
    - "--messages-root"
    - i18n
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Messages directory 'custom-src/i18n' does not exist.
Hint: Check your .glotrc.json 'messagesDir' setting.
