tests/cli/snapshots/cli__check__common_args_with_multiple_rules.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - hardcoded
    - missing
    - "--verbose"
    - "--primary-locale"
    - en
    - "--source-root"
    - custom-src
    - "--messages-root"
    - i18n
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
warning: Include path does not exist: custom-src/src/components
Error: Messages directory 'custom-src/i18n' does not exist.
Hint: Check your .glotrc.json 'messagesDir' setting.
