tests/cli/snapshots/cli__check__config_ignores.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Messages directory './src/locales' does not exist.
Hint: Check your .glotrc.json 'messagesDir' setting.
