tests/cli/snapshots/cli__check__config_severity_override_untranslated_error_without_usage.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - untranslated
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.submit"  [untranslated]
  --> ./messages/en.json:1:1
  = note: ("Submit") identical in: zh
  = used: (no usages found)


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
