tests/cli/snapshots/cli__check__config_severity_override_unused_error.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - unused
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.unused"  [unused-key]
  --> ./messages/en.json:1:1
  = note: ("Unused")


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
