tests/cli/snapshots/cli__check__dynamic_key_warning.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "Common.submit"  unused-key
  --> ./messages/en.json:1:1
  = note: ("Submit")

warning: "variable key"  unresolved-key
  --> ./src/app.tsx:4:23
  |
4 |       return <button>{t(keyName)}</button>;
  |                       ^


✘ 2 problems (0 errors, 2 warnings)

----- stderr -----
