tests/cli/snapshots/cli__check__empty_project_no_source_files.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 0 source files, 1 locale file - no issues found

----- stderr -----
